--- a/src/components/hero-section/heroSection.css
+++ b/src/components/hero-section/heroSection.css
@@ -1,9 +1,10 @@
 .hero-section {
-    margin-top: 200px;
+    text-align: left;
+    padding: 120px;
 }
 
 .hero-section h1 {
     color: green;
-    font-size: 5.5rem;
+    font-size: 9rem;
     font-weight: 450;
 }
