--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,12 +1,11 @@
-.login-card {
-    margin-top: 100px;
-    display: inline-block;
-    border: 5px solid green;
-    background-color: black; /* Background color for the card */ /* Border for the card */
-    border-radius: 30px; /* Border radius for rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional box shadow for a lifted effect */
-    padding: 70px; /* Padding to create space inside the card */
-    overflow: hidden;
+.login-page {
+     margin-top: 150px;
+}
+
+.login-title {
+    color: green;
+    font-size: 3.5rem;
+    font-weight: 200;
 }
 
 .login-card h1 {
@@ -19,18 +18,16 @@
 
 .login-form {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
+    padding-left: 70px;
+    padding-right: 120px;
     gap: 50px;
     background-color: #000;
-   
-   
 }
 
 .login-form input {
     background-color: #000;
     width: 100%;
-    
-    
 }
 
 .login-form input::placeholder {
