--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,33 +1,21 @@
-.register-card {
-    margin-top: 100px;
-    display: inline-block;
-    border: 5px solid green;
-    background-color: #000; /* Background color for the card */ /* Border for the card */
-    border-radius: 30px; /* Border radius for rounded corners */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional box shadow for a lifted effect */
-    padding: 70px; /* Padding to create space inside the card */
-    overflow: hidden;
-}
-
-.register-card h1 {
+.register-title {
+    padding: 50px;
     color: green;
-    background-color: #000;
-    letter-spacing: 15px;
-    margin-bottom: 50px;
+    font-size: 3.5rem;
+    font-weight: 200;
 }
-
 .register-form {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
+    padding-left: 70px;
+    padding-right: 120px;
     gap: 50px;
-    background-color: #000;
-   
-   
 }
 
 .register-form input {
     background-color: #000;
     width: 100%;
+    text-align: left;
     
     
 }
@@ -38,4 +26,5 @@
 
 .register-button {
     font-size: 2rem;
+    margin-top: 120px;
 }
